building gf6 sheet

--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -175,6 +175,7 @@
 										<li><a href="{{request.session.local_toggle}}/cell_track_9341_mobile">9341 Cell MOBILE</a></li>  
 										<li><a href="{{request.session.local_toggle}}/cell_track_9341">9341 Cell</a></li>  
 										<li><a href="{{request.session.local_toggle}}/wip_update">wip_update</a></li>  
+										<li><a href="{{request.session.local_toggle}}/gf6_reaction">gf6_reaction</a></li>  
 									</ul>  
 								</li>
 
