--- a/trakberry/templates/gf6_reaction.html
+++ b/trakberry/templates/gf6_reaction.html
@@ -32,7 +32,7 @@
 
 </style>
 
-  <title>Management Page</title>
+  <title>GF6 REACTION</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	
@@ -53,7 +53,7 @@
 
 		.frame2{color:black;text-align:center;background:rgb(83, 134, 202);float:left;width:32%;position:relative;left:5px;margin-bottom: 5px;}
 		.frame3 {color:black;text-align:center;background:rgb(61, 138, 64);float:left;width:32%;position:relative;left:10px;margin-bottom: 5px;}
-		.frame4 {color:black;text-align:center;float:left;width:90%;position:relative;left:10px;margin-bottom: 5px;margin-top: 15px;}
+		.frame4 {color:black;text-align:center;float:left;width:98%;position:relative;left:5px;margin-bottom: 5px;margin-top: 15px;}
 
 		.frame5{color:black;text-align:center;background:rgb(168, 168, 168);float:right;width:40%}
 		.head1{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);background:rgb(114, 159, 243);width:85%}
@@ -71,94 +71,7 @@
 		
 	</style>
 
-<!-- Table format for 24hrs-->
-<style>
-	#prod24 {
-		font-family: Arial, Helvetica, sans-serif;
-		border-collapse: collapse;
-		width: 100%;
-	}
-	#prod24 td, #prod24 th {
-		border: 1px solid rgb(136, 134, 134);
-		padding: 8px;
-	}
-	#prod24 tr:nth-child(even){background-color: #E6E2E1;}
-	#prod24 tr:nth-child(odd){background-color: #C4C4C4;}
-	#prod24 tr:hover {background-color: #ddd;}
-	#prod24 th {
-		padding-top: 12px;
-		padding-bottom: 12px;
-		text-align: left;
-		background-color: rgb(139, 128, 107);
-		color: white;
-	}
-	</style>
-<style>
-	#planB {
-		font-family: Arial, Helvetica, sans-serif;
-		border-collapse: collapse;
-		width: 100%;
-	}
-	#planB td, #planB th {
-		border: 1px solid rgb(136, 134, 134);
-		padding: 1px;
-	}
-	#planB tr:nth-child(even){background-color: #E6E2E1;}
-	#planB tr:nth-child(odd){background-color: #C4C4C4;}
-	#planB tr:hover {background-color: #ddd;}
-	#planB th {
-		padding-top: 12px;
-		padding-bottom: 12px;
-		text-align: left;
-		background-color: rgb(139, 128, 107);
-		color: white;
-	}
-	</style>
 
-<!-- Table format for Week Production to Date-->
-<style>
-	#prodwk {
-		font-family: Arial, Helvetica, sans-serif;
-		border-collapse: collapse;
-		width: 100%;
-	}
-	#prodwk td, #prodwk th {
-		border: 1px solid rgb(136, 134, 134);
-		padding: 8px;
-	}
-	#prodwk tr:nth-child(even){background-color: #f8ce96;}
-	#prodwk tr:nth-child(odd){background-color: #e29d4e;}
-	#prodwk tr:hover {background-color: #ddd;}
-	#prodwk th {
-		padding-top: 12px;
-		padding-bottom: 12px;
-		text-align: left;
-		background-color: rgb(139, 117, 107);
-		color: white;
-	}
-	</style>
-
-<style>
-	#prodpast {
-		font-family: Arial, Helvetica, sans-serif;
-		border-collapse: collapse;
-		width: 100%;
-	}
-	#prodpast td, #prodpast th {
-		border: 1px solid rgb(136, 134, 134);
-		padding: 8px;
-	}
-	#prodpast tr:nth-child(even){background-color: #f8ad96;}
-	#prodpast tr:nth-child(odd){background-color: #e27d4e;}
-	#prodpast tr:hover {background-color: #ddd;}
-	#prodpast th {
-		padding-top: 12px;
-		padding-bottom: 12px;
-		text-align: left;
-		background-color: rgb(139, 107, 107);
-		color: white;
-	}
-	</style>
 
 <!-- Style for Production Summaries -->
 <style>   
@@ -169,16 +82,37 @@
 	}
 	#prodsum td, #prodsum th {
 		border: 1px solid rgb(136, 134, 134);
-		padding: 8px;
+		padding: 3px;
 	}
 	/* #prodsum tr:nth-child(even){background-color: #96dbf8;}
 	#prodsum tr:nth-child(odd){background-color: #45b4c6;} */
 	#prodsum tr:hover {background-color: #ddd;}
 	#prodsum th {
-		padding-top: 12px;
-		padding-bottom: 12px;
+		padding-top: 10px;
+		padding-bottom: 10px;
 		text-align: left;
 		background-color: rgb(68, 82, 91);
+		color: white;
+	}
+</style>
+<style>   
+	#prodso {
+		font-family: Arial, Helvetica, sans-serif;
+		border-collapse: collapse;
+		width: 100%;
+	}
+	#prodso td, #prodso th {
+		border: 1px solid rgb(30,148,20);
+		padding: 3px;
+	}
+	/* #prodsum tr:nth-child(even){background-color: #96dbf8;}
+	#prodsum tr:nth-child(odd){background-color: #45b4c6;} */
+	#prodso tr:hover {background-color: #ddd;}
+	#prodso th {
+		padding-top: 10px;
+		padding-bottom: 10px;
+		text-align: left;
+		background-color: rgb(13,76,8);
 		color: white;
 	}
 </style>
@@ -186,49 +120,87 @@
 </head>
 
 <body>
-<img alt="full screen background image" src="/static/media/mgmt.jpeg?{{TCUR}}" id="full-screen-background-image"/>
+<img alt="full screen background image" src="/static/media/paper3.jpg?{{request.session.TCUR}}" id="full-screen-background-image"/>
 
 
 
 
 
 <div class="wrapper_main">
-
     <div class="frame4">  <!-- Production Summary-->
+
+
         <table id="prodsum">
-            <tr><td></td>
-                {% for i in request.session.pdate %}
+			<td colspan="24" bgcolor="#343E45"><center><font style="font-weight:bolder;font-size:x-large;color:#fff;">1713 Weekly Production</font></center></td>
+            <tr><th rowspan="2"><center>Machine</center></th>
+                {% for i in request.session.pdate_1713 %}
                     <th colspan="3"><center>{{i}}</center></th>
                 {% endfor %}
-            </tr><tr><th>Machine</th>
-                {% for i in request.session.pdate %}
-                    {% for ii in request.session.shift %}
+				<th rowspan="2"><center>Week Totals</center></th>
+				<th rowspan="2"><center>Current Goal</center></th>
+            </tr><tr>
+                {% for i in request.session.pdate_1713 %}
+                    {% for ii in request.session.shift_1713 %}
                         <th><center>{{ii}}</center></th>
                     {% endfor %}
                 {% endfor %}
             </tr>
-
-
-
-        
-        {% for i in request.session.totals %}
+        {% for i in request.session.totals_1713 %}
             <tr>
                 {% if i.0.0 == '900' %}
-                    <td bgcolor="#96dbf8"><center>Pack</center></td>
+                    <td bgcolor="{{i.0.4}}"><center>Pack</center></td>
                 {% else %} 
-                    <td bgcolor="#96dbf8"><center>{{i.0.0}}</center></td>
+                    <td bgcolor="{{i.0.4}}"><center>{{i.0.0}}</center></td>
                 {% endif %}
-            {% for ii in i %}
-                <td bgcolor="#96dbf8"><center>{{ii.3}}</center></td>
-            {% endfor %}
-            </tr>
+           		 {% for ii in i %}
+               		<td bgcolor="{{ii.4}}"><center>{{ii.3}}</center></td>
+            	{% endfor %}
+				{% for x in request.session.op_span_1713 %}
+					{% if x.0 == i.0.0 and x.2 > 0 %} 
+							<td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b>{{x.3}}</b></center></td>
+							<td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b>{{request.session.goal_1713}}</b></center></td>
+					{% endif %}
+				{% endfor %}
+			</tr>
         {% endfor %}
-
-
-
         </table>
+<br><br>
+        <table id="prodso">
+			<td colspan="24" bgcolor="#0C3F08"><center><font style="font-weight:bolder;font-size:x-large;color:#fff;">3627 Weekly Production</font></center></td>
+            <tr><th rowspan="2"><center>Machine</center></th>
+                {% for i in request.session.pdate_3627 %}
+                    <th colspan="3"><center>{{i}}</center></th>
+                {% endfor %}
+				<th rowspan="2"><center>Week Totals</center></th>
+				<th rowspan="2"><center>Current Goal</center></th>
+            </tr><tr>
+                {% for i in request.session.pdate_3627 %}
+                    {% for ii in request.session.shift_3627 %}
+                        <th><center>{{ii}}</center></th>
+                    {% endfor %}
+                {% endfor %}
+            </tr>
+        {% for i in request.session.totals_3627 %}
+            <tr>
+                {% if i.0.0 == '900' %}
+                    <td bgcolor="{{i.0.4}}"><center>Pack</center></td>
+                {% else %} 
+                    <td bgcolor="{{i.0.4}}"><center>{{i.0.0}}</center></td>
+                {% endif %}
+           		 {% for ii in i %}
+               		<td bgcolor="{{ii.4}}"><center>{{ii.3}}</center></td>
+            	{% endfor %}
+				{% for x in request.session.op_span_3627 %}
+					{% if x.0 == i.0.0 and x.2 > 0 %} 
+							<td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b>{{x.3}}</b></center></td>
+							<td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b>{{request.session.goal_3627}}</b></center></td>
+					{% endif %}
+				{% endfor %}
+			</tr>
+        {% endfor %}
+        </table>
+
+
     </div>
-
 </div>
-
 </body></html>
