--- a/trakberry/templates/gf6_input.html
+++ b/trakberry/templates/gf6_input.html
@@ -31,13 +31,13 @@
 
 
 </style>
-
 <script>
-	function gf6_reaction_prev(){location.replace("{{request.session.local_toggle}}/gf6_reaction_prev")}
-	function gf6_reaction(){location.replace("{{request.session.local_toggle}}/gf6_reaction")}
+	function gf6_input_prev(){location.replace("{{request.session.local_toggle}}/gf6_input_prev")}
+	function gf6_input(){location.replace("{{request.session.local_toggle}}/gf6_input")}
 </script>
 
-  <title>GF6 REACTION</title>
+
+  <title>GF6 INPUT</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	
@@ -136,26 +136,26 @@
 
 
         <table id="prodsum">
-			<td colspan="24" bgcolor="#343E45"><center><font style="font-weight:bolder;font-size:x-large;color:#fff;">1713 Weekly Production</font>
+			<td colspan="24" bgcolor="#343E45"><center><font style="font-weight:bolder;font-size:x-large;color:#fff;">1731 Weekly Production</font>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<button  style="background-color: #585858;border-radius: 10px;height:70%;font-size:10px;color:#fefffa;vertical-align:middle;" onclick="gf6_reaction_prev()"> << PREV WEEK </button> 
+				<button  style="background-color: #585858;border-radius: 10px;height:70%;font-size:10px;color:#fefffa;vertical-align:middle;" onclick="gf6_input_prev()"> << PREV WEEK </button> 
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<button  style="background-color: #585858;border-radius: 10px;height:70%;font-size:10px;color:#fefffa;vertical-align:middle;" onclick="gf6_reaction()"> CURRENT WEEK </button> </center>
+				<button  style="background-color: #585858;border-radius: 10px;height:70%;font-size:10px;color:#fefffa;vertical-align:middle;" onclick="gf6_input()"> CURRENT WEEK </button> </center>
 			</td>
             <tr><th rowspan="2"><center>Machine</center></th>
-                {% for i in request.session.pdate_1713 %}
+                {% for i in request.session.pdate_1731 %}
                     <th colspan="3"><center>{{i}}</center></th>
                 {% endfor %}
 				<th rowspan="2"><center>Week Totals</center></th>
 				<th rowspan="2"><center>Current Goal</center></th>
             </tr><tr>
-                {% for i in request.session.pdate_1713 %}
-                    {% for ii in request.session.shift_1713 %}
+                {% for i in request.session.pdate_1731 %}
+                    {% for ii in request.session.shift_1731 %}
                         <th><center>{{ii}}</center></th>
                     {% endfor %}
                 {% endfor %}
             </tr>
-        {% for i in request.session.totals_1713 %}
+        {% for i in request.session.totals_1731 %}
             <tr>
                 {% if i.0.0 == '900' %}
                     <td bgcolor="{{i.0.4}}"><center>Pack</center></td>
@@ -165,14 +165,16 @@
            		 {% for ii in i %}
                		<td bgcolor="{{ii.4}}"><center>{{ii.3}}</center></td>
             	{% endfor %}
-				{% for x in request.session.op_span_1713 %}
+				{% for x in request.session.op_span_1731 %}
 					{% if x.0 == i.0.0 and x.2 > 0 %} 
-						{% if x.3 < request.session.goal_1713 %}
-							<td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b><font style="color:rgb(180, 0, 0);">{{x.3}}</font></b></center></td>
-						{% else %}
-							<td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b>{{x.3}}</b></center></td>
-						{% endif %}
-							<td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b>{{request.session.goal_1713}}</b></center></td>
+                            {% if x.3 < request.session.goal_3632 %}
+                                <td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b><font style="color:rgb(180, 0, 0);">{{x.3}}</font></b></center></td>
+                            {% else %}
+                                <td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b>{{x.3}}</b></center></td>
+                            {% endif %}
+                            
+							
+							<td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b>{{request.session.goal_1731}}</b></center></td>
 					{% endif %}
 				{% endfor %}
 			</tr>
@@ -180,21 +182,21 @@
         </table>
 <br><br>
         <table id="prodso">
-			<td colspan="24" bgcolor="#0C3F08"><center><font style="font-weight:bolder;font-size:x-large;color:#fff;">3627 Weekly Production</font></center></td>
+			<td colspan="24" bgcolor="#0C3F08"><center><font style="font-weight:bolder;font-size:x-large;color:#fff;">3632 Weekly Production</font></center></td>
             <tr><th rowspan="2"><center>Machine</center></th>
-                {% for i in request.session.pdate_3627 %}
+                {% for i in request.session.pdate_3632 %}
                     <th colspan="3"><center>{{i}}</center></th>
                 {% endfor %}
 				<th rowspan="2"><center>Week Totals</center></th>
 				<th rowspan="2"><center>Current Goal</center></th>
             </tr><tr>
-                {% for i in request.session.pdate_3627 %}
-                    {% for ii in request.session.shift_3627 %}
+                {% for i in request.session.pdate_3632 %}
+                    {% for ii in request.session.shift_3632 %}
                         <th><center>{{ii}}</center></th>
                     {% endfor %}
                 {% endfor %}
             </tr>
-        {% for i in request.session.totals_3627 %}
+        {% for i in request.session.totals_3632 %}
             <tr>
                 {% if i.0.0 == '900' %}
                     <td bgcolor="{{i.0.4}}"><center>Pack</center></td>
@@ -204,14 +206,14 @@
            		 {% for ii in i %}
                		<td bgcolor="{{ii.4}}"><center>{{ii.3}}</center></td>
             	{% endfor %}
-				{% for x in request.session.op_span_3627 %}
+				{% for x in request.session.op_span_3632 %}
 					{% if x.0 == i.0.0 and x.2 > 0 %} 
-						{% if x.3 < request.session.goal_3627 %}
-							<td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b><font style="color:rgb(180, 0, 0);">{{x.3}}</font></b></center></td>
-						{% else %}
-							<td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b>{{x.3}}</b></center></td>
-						{% endif %}
-							<td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b>{{request.session.goal_3627}}</b></center></td>
+                            {% if x.3 < request.session.goal_3632 %}
+                                <td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b><font style="color:rgb(180, 0, 0);">{{x.3}}</font></b></center></td>
+                            {% else %}
+                                <td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b>{{x.3}}</b></center></td>
+                            {% endif %}
+							<td  bgcolor="{{i.0.4}}" rowspan="{{x.2}}"><center><b>{{request.session.goal_3632}}</b></center></td>
 					{% endif %}
 				{% endfor %}
 			</tr>
