--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -235,7 +235,7 @@
 			{{request.session.area1}} 
 	</font>
 	</center>
-	<div id="chart_div" style="width: 100%; height: 400px; "></div>
+	<div id="chart_div" style="width: 100%; height: 600px; "></div>
 	<br>
 	
 	
@@ -256,7 +256,7 @@
 	</td><td style="border:1px solid black;">
 	<u>End of Shift Projection : </u><br>{{request.session.projection1}}
 	</td></tr>
-	<tr><td>
+	<!-- <tr><td>
 		<u>Week to Date:</u> <br>{{request.session.week_count1}}
 		</td><td style="border:1px solid black;">
 		<u>Week Projection: </u><br>{{request.session.week_projection1}}
@@ -264,10 +264,10 @@
 		<u>Last Week: </u><br>{{request.session.week_count1a}}
 	</td><td style="border:1px solid black;">
 		<u>2 Weeks Ago: </u><br>{{request.session.week_count1b}}
-		</td></tr>
+		</td></tr> -->
 	
 	</table>
-	<br><br>
+	<!-- <br><br>
 	<b><u>Previous Shifts</u>  {{request.session.total_test}}</b>
 	<br>
 	<table style="width:40%;border: 1px solid black;"><tr><td style="border:1px solid black;">
@@ -285,7 +285,7 @@
 	{{i.5}}
 	</td></tr>
 	{% endfor %}
-	</table>
+	</table> -->
 	</div>
 	
 	
@@ -296,7 +296,7 @@
 			{{request.session.area2}}
 		</font>
 	</center>
-		<div id="chart2_div" style="width: 100%; height: 400px; "></div>
+		<div id="chart2_div" style="width: 100%; height: 600px; "></div>
 		<br>
 		
 		
@@ -317,7 +317,7 @@
 	</td><td style="border:1px solid black;">
 	<u>End of Shift Projection : </u><br>{{request.session.projection2}}
 	</td></tr>
-	<tr><td>
+	<!-- <tr><td>
 		<u>Week to Date:</u> <br>{{request.session.week_count2}}
 		</td><td style="border:1px solid black;">
 		<u>Week Projection: </u><br>{{request.session.week_projection2}}
@@ -325,9 +325,11 @@
 		<u>Last Week: </u><br>{{request.session.week_count2a}}
 	</td><td style="border:1px solid black;">
 		<u>2 Weeks Ago: </u><br>{{request.session.week_count2b}}
-		</td></tr>
+		</td></tr> -->
 	
 	</table>
+
+<!-- 
 		<br><br>
 		<b><u>Previous Shifts</u></b>
 		<br>
@@ -346,7 +348,9 @@
 		{{i.5}}
 		</td></tr>
 		{% endfor %}
-		</table>
+		</table> -->
+
+
 		</div>
 	
 	
