put in a fix for bug on tracking

--- a/trakberry/templates/supervisor.html
+++ b/trakberry/templates/supervisor.html
@@ -28,9 +28,9 @@ a.green:hover {color: #FFFFFF;background-color: #315225;border-radius: 25px;}
 <!--
 <img alt="full screen background image" src="/media/paper3.jpg" id="full-screen-background-image"/>
 -->
-{% if request.session.login_name = "Dave Clark" %}
+<!-- {% if request.session.login_name = "Dave Clark" %}
 <meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/main_logout" />
-{% endif %}
+{% endif %} -->
 {% block header %}
 {% if request.session.refresh_sup != 3 %}
 <meta http-equiv="refresh" content="20; url={{request.session.local_toggle}}/sup" />
