--- a/trakberry/templates/track_temp.html
+++ b/trakberry/templates/track_temp.html
@@ -5,9 +5,9 @@
 	
 	<meta http-equiv="refresh" content="500; url={{request.session.local_toggle}}/tracking" />
 	
-
+		<center>
 	<img src="/static/media/park.jpg" height="80%" width="80%" style="position : relative; top: 20px;"/>
-	
+</center>
 	</body>
 	
 </html>
