--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -176,7 +176,8 @@
 										<li><a href="{{request.session.local_toggle}}/cell_track_9341">9341 Cell</a></li>  
 										<li><a href="{{request.session.local_toggle}}/wip_update">wip_update</a></li>  
 										<li><a href="{{request.session.local_toggle}}/gf6_reaction">gf6_reaction</a></li> 
-										<li><a href="{{request.session.local_toggle}}/gf6_input">gf6_input</a></li>  
+										<li><a href="{{request.session.local_toggle}}/gf6_input">gf6_input</a></li> 
+										<li><a href="{{request.session.local_toggle}}/prod_10R">prod_10R</a></li>  
 									</ul>  
 								</li>
 
