--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -370,7 +370,7 @@
 
 <style>
 	body  {
-	  background-image: url("/static/media/i1.jpg?{{TCUR}}");
+	  background-image: url("/static/media/i1.jpg?{{t}}");
 	
 	}
 	
