color change to displays.   Login block on me

--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -362,15 +362,11 @@
 		color: white;
 	}
 </style>
-<style>
-	body{
-		background-image: url();
-	}
-</style>
+
 
 <style>
 	body  {
-	  background-image: url("/static/media/i1.jpg?{{t}}");
+		background-color:rgb(151, 165, 177);
 	
 	}
 	
