--- a/trakberry/templates/prod_10R.html
+++ b/trakberry/templates/prod_10R.html
@@ -7,7 +7,7 @@
 
 
 
-#full-screen-background-image {z-index: -999;min-height: 110%; min-width: 100%;width: 100%;height: 110%;position: fixed;top: ;  left: 0;}
+
 
 .multiple-borders {
   -webkit-box-shadow:
@@ -163,11 +163,17 @@
 		color: white;
 	}
 </style>
-
+<style>
+	body  {
+		background-color:rgb(241, 241, 204);
+	
+	}
+	
+	</style>
 </head>
 
 <body>
-<img alt="full screen background image" src="/static/media/paper3.jpg?{{request.session.TCUR}}" id="full-screen-background-image"/>
+
 
 
 
