update on the single track

--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -179,6 +179,7 @@
 										<li><a href="{{request.session.local_toggle}}/gf6_input">gf6_input</a></li> 
 										<li><a href="{{request.session.local_toggle}}/prod_10R">prod_10R</a></li> 
 										<li><a href="{{request.session.local_toggle}}/test_email_7">test_email_7</a></li>  
+										<li><a href="{{request.session.local_toggle}}/track_single">track_single</a></li>  
 									</ul>  
 								</li>
 
