--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -35,7 +35,7 @@
 
 
 
-
+<!-- 
 											<li class="dropdown-submenu">
 												<a href="#" class="dropdown-toggle" data-toggle="dropdown">Scrap Review <b><mark>(** New ! **)</mark></b></a>
 												<ul class="dropdown-menu" style="background-color:#d3ded4;">
@@ -46,7 +46,7 @@
 
 													</li>
 												</ul>
-											</li>
+											</li> -->
 
 
 
@@ -110,8 +110,8 @@
 				</div>
 		</div>
 		<br>
-{% block content2 %}
-<br><br><br><br>
+
+
 
 {% block refresh1 %}
 {% endblock %}
@@ -122,18 +122,17 @@
 
 
 {% if request.session.scrap_mgmt_login_password_check != 'True' %}
-<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/scrap_mgmt_login_form" />
-
+	<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/scrap_mgmt_login_form" />
 {% endif %}
 
 
 
 
 
-{% endblock %}
+{% endblock %}    <!-- End of Block content  -->
 
 
-{% endblock %}
+
 </body>
 
-{% endblock %}
+{% endblock %}  <!-- End of Block Main -->
