put temp fix in for 9341 Insp track

--- a/trakberry/templates/done_test2.html
+++ b/trakberry/templates/done_test2.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <script>
+addEventListener("click", function() {
+    var
+          el = document.documentElement
+        , rfs =
+               el.requestFullScreen
+            || el.webkitRequestFullScreen
+            || el.mozRequestFullScreen
+    ;
+    rfs.call(el);
+});
+    </script>
+
+</head>
 <body>
+
+
 <br><br>
 Finished update for TECH Names in EPV !
 
