fixed date issue 9341

--- a/trakberry/templates/test67.html
+++ b/trakberry/templates/test67.html
@@ -1,13 +1,9 @@
 <html>
 <body><table>
-{% for x in list %}
-	<tr>
-	{% for y in x %}
-		<td>
-		** {{y}} **
-		</td>
-	{% endfor %}
-	</tr>
+{% for x in t2 %}
+
+		** {{x}} **
+<br>
 {% endfor %}	
 
 
