updated 10Rprod to show all and fixed email problems

--- a/trakberry/templates/done_test8.html
+++ b/trakberry/templates/done_test8.html
@@ -2,12 +2,12 @@
 <html>
 <body>
 
-This Kiosk ID is : {{request.session.kiosk_id}}
 <br><br>
-<br><br>
+<!-- {% for i in request.session.pdate8 %} 
+    {{i}} <br>
+{% endfor %} -->
 
-<a href="{{request.session.local_toggle}}/kiosk/">Main Menu</a>
-
+Done
 </body>
   
 </html> 
