--- a/trakberry/templates/main_login_form.html
+++ b/trakberry/templates/main_login_form.html
@@ -16,6 +16,7 @@
 <select style="font-size:14px;width:320px;height:30px;" name="login_name" >
 
 	<option value="Dave Clark">Dave Clark</option>
+	<option value="Nathan Klein-Geltink">Nathan Klein-Geltink</option>
 	<option value="Andrew Smith">Andrew Smith</option>
 	<option value="Chris Dufton">Chris Dufton</option>
 	<option value="Dave Godbout">Dave Godbout</option>
