--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -180,6 +180,7 @@
 										<li><a href="{{request.session.local_toggle}}/prod_10R">prod_10R</a></li> 
 										<li><a href="{{request.session.local_toggle}}/test_email_7">test_email_7</a></li>  
 										<li><a href="{{request.session.local_toggle}}/track_single">track_single</a></li>  
+										<li><a href="{{request.session.local_toggle}}/balancer_1508">1508 Data</a></li>  
 									</ul>  
 								</li>
 
