--- a/trakberry/templates/prod_10R.html
+++ b/trakberry/templates/prod_10R.html
@@ -33,8 +33,8 @@
 </style>
 
 <script>
-	function prod_10R_prev(){location.replace("{{request.session.local_toggle}}/prod_10R_prev")}
-	function prod_10R(){location.replace("{{request.session.local_toggle}}/prod_10R")}
+	function prod_10R_prev(){location.replace("{{request.session.local_toggle}}/update7")}
+	function prod_10R(){location.replace("{{request.session.local_toggle}}/update7")}
 </script>
 
   <title>10R Production</title>
@@ -165,7 +165,7 @@
 </style>
 <style>
 	body  {
-		background-color:rgb(241, 241, 204);
+		background-color:rgb(0, 0, 0);
 	
 	}
 	
@@ -531,6 +531,31 @@
 							<td  bgcolor="#ffffff" rowspan="{{x.2}}"><center><b><font style="color:rgb(180, 0, 0);">{{request.session.inv_change_4865}}</font></b></center></td>
 					{% else %}
 							<td  bgcolor="#ffffff" rowspan="{{x.2}}"><center><b><font style="color:rgb(12, 12, 12);">{{request.session.inv_change_4865}}</font></b></center></td>
+					{% endif %}
+					
+			{% endif %}
+		{% endfor %}
+	</tr>
+{% endfor %}
+
+{% for i in request.session.totals_6729 %}
+	<tr>
+			<td bgcolor="#CDCDCD"><center><b>50-6729</b></center></td>
+			{% for ii in i %}
+			   <td bgcolor="#CDCDCD"><center>{{ii.3}}</center></td>
+		{% endfor %}
+		{% for x in request.session.op_span_6729 %}
+			{% if x.0 == i.0.0 and x.2 > 0 %} 
+				{% if x.3 < request.session.goal_6729 %}
+					<td  bgcolor="#CDCDCD" rowspan="{{x.2}}"><center><b><font style="color:rgb(180, 0, 0);">{{x.3}}</font></b></center></td>
+				{% else %}
+					<td  bgcolor="#CDCDCD" rowspan="{{x.2}}"><center><b>{{x.3}}</b></center></td>
+				{% endif %}
+					<td  bgcolor="#CDCDCD" rowspan="{{x.2}}"><center><b>{{request.session.goal_6729}}</b></center></td>
+					{% if request.session.inv_change_6729 < 0 %}
+							<td  bgcolor="#CDCDCD" rowspan="{{x.2}}"><center><b><font style="color:rgb(180, 0, 0);">{{request.session.inv_change_6729}}</font></b></center></td>
+					{% else %}
+							<td  bgcolor="#CDCDCD" rowspan="{{x.2}}"><center><b><font style="color:rgb(12, 12, 12);">{{request.session.inv_change_6729}}</font></b></center></td>
 					{% endif %}
 					
 			{% endif %}
