updated live zf and 6729

--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -177,7 +177,7 @@
 										<li><a href="{{request.session.local_toggle}}/wip_update">wip_update</a></li>  
 										<li><a href="{{request.session.local_toggle}}/gf6_reaction">gf6_reaction</a></li> 
 										<li><a href="{{request.session.local_toggle}}/gf6_input">gf6_input</a></li> 
-										<li><a href="{{request.session.local_toggle}}/prod_10R">prod_10R</a></li> 
+										<li><a href="{{request.session.local_toggle}}/prod_10R_initial">Week Production</a></li> 
 										<li><a href="{{request.session.local_toggle}}/test_email_7">test_email_7</a></li>  
 										<li><a href="{{request.session.local_toggle}}/track_single">track_single</a></li>  
 										<li><a href="{{request.session.local_toggle}}/balancer_1508">1508 Data</a></li>  
