worked on 6729 and 4748 tracking fix

--- a/trakberry/templates/test99.html
+++ b/trakberry/templates/test99.html
@@ -1,29 +1,14 @@
 <html>
+	
 <body>
-	
-	
- <br><br><br>
-	Test Variable : 
-	<br>
-{% for item in test %}
-{{item}}  <br>
-{% endfor %}
-<br><br><br>
---------------------------------------------------------------
+
+<b>
+Below Variable
+
+</b>
 <br><br>
+{{ctr}}
 
 
-{% for item in data2 %}
-{{item}}  <br>
-{% endfor %}
-
-
-
-<br>
-
-
-
-
-<br>
-
-</body></html>
+</body>
+</html>
